# FlappyBird

./: .gitignore  CMakeLists.txt  cmake_install.cmake
src/: Bird.cpp  Bird.h  FlappyBird.cpp  Pipe.cpp  Pipe.h  Toolbox.cpp  Toolbox.h
